--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -1,12 +1,10 @@
-::backdrop {
+.popup::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0.75;
 }
 
 .popup {
-  /*position: relative;
-  background-color: transparent;*/
-  position: relative;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -14,12 +12,13 @@
   border: none;
   padding: 40px;
   max-width: 430px;
+  width: 100%;
 }
 
 .popup__container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   max-width: 430px;
   width: 100%;
   margin: auto;
