--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -4,10 +4,21 @@
 }
 
 .popup {
-  position: fixed;
+  /* position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: transparent;
+  border: none;
+  padding: 40px;
+ max-width: 430px;
+  width: 100%; 
+*/
+  /*display: flex;*/
+  position: fixed;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: transparent;
   border: none;
   padding: 40px;
